--- a/containers/server/Dockerfile
+++ b/containers/server/Dockerfile
@@ -5,6 +5,10 @@ FROM node:13-alpine
 
 COPY . /dist
 
-CMD node "--max-old-space-size=2048" /dist/server
+RUN npm install pm2 -g
+
+CMD pm2-runtime /dist/server \
+    --max-memory-restart 1900M \
+    --instances 2
 
 VOLUME ["/dist"]
