Local infrastructure provisioner (front)

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "preinstall": "git config core.hooksPath .git/hooks/",
     "prebuild": "gulp build.sass",
     "build": "sh build/base-locale.sh dist",
-    "prebuild-dev": "gulp build.sass --deploy-url=http://localhost",
-    "build-dev": "npm run build:dev",
-    "serve-dev": "npm run server:ssr",
-    "build:dev": "ng build --output-path dist --deploy-url=/ --watch=true --poll=800",
-    "serve:dev": "ng serve --host=0.0.0.0 --deploy-url=/ --configuration=hmr --hmr --poll=800 --progress --disableHostCheck=true",
+    "build-dev": "echo 'Deprecated, please use build:dev'; npm run build:dev --",
+    "serve-dev": "echo 'Deprecated, please use serve:ssr'; npm run serve:ssr --",
+    "prebuild:dev": "gulp build.sass --deploy-url=http://localhost:8080/",
+    "build:dev": "ng build --output-path=dist/en --deploy-url=http://localhost:8080/ --watch=true --poll=800 --aot",
+    "preserve:dev": "gulp build.sass --deploy-url=http://localhost:4200/",
+    "serve:dev": "ng serve --deploy-url=http://localhost:4200/ --watch=true --poll=800 --aot --progress --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "cypress run --debug",
@@ -22,6 +23,7 @@
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
     "build:client-and-server-bundles": "npm run build && ng run minds:server:production",
+    "build:ssr:dev": "ng run minds:server:production && npm run compile:server",
     "bundle-report": "webpack-bundle-analyzer dist/en/stats.json"
   },
   "private": true,
@@ -110,7 +112,8 @@
     "tslint": "~5.12.0",
     "typescript": "~3.4.5",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "nodemon": "^2.0.2"
   },
   "husky": {
     "hooks": {
