--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "moment": "^2.24.0",
     "ng-pick-datetime": "^7.0.0",
     "ngx-drag-drop": "^2.0.0",
+    "ngx-image-cropper": "^3.0.1",
     "ngx-plyr": "^3.0.1",
     "node-cache": "^5.1.0",
     "plotly.js": "^1.47.4",
