--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "sh build/base-locale.sh dist",
     "build-dev": "echo 'Deprecated, please use build:dev'; npm run build:dev --",
     "serve-dev": "echo 'Deprecated, please use serve:ssr'; npm run serve:ssr --",
-    "prebuild:dev": "gulp build.sass --deploy-url=http://localhost:8080/",
-    "build:dev": "ng build --output-path=dist/en --deploy-url=http://localhost:8080/ --watch=true --poll=800 --aot",
+    "prebuild:dev": "gulp build.sass --deploy-url=/",
+    "build:dev": "ng build --output-path=dist/en --deploy-url=/ --watch=true --poll=800 --aot",
     "preserve:dev": "gulp build.sass --deploy-url=http://localhost:4200/",
     "serve:dev": "ng serve --deploy-url=http://localhost:4200/ --watch=true --poll=800 --aot --progress --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true",
     "test": "ng test",
@@ -29,6 +29,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.1",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
     "@angular/core": "~8.1.1",
@@ -43,7 +44,6 @@
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "~8.1.1",
     "@nguniversal/socket-engine": "~8.1.1",
-    "@angular/cdk": "^8.2.3",
     "@sentry/browser": "^5.11.1",
     "angular-plotly.js": "^1.3.2",
     "bn.js": "^4.11.8",
@@ -57,6 +57,7 @@
     "ethjs-signer": "0.1.1",
     "express-http-proxy": "^1.6.0",
     "global": "^4.3.2",
+    "macy": "^2.5.1",
     "material-design-icons": "~3.0.1",
     "material-design-lite": "~1.3.0",
     "medium-editor": "^5.23.2",
