--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/platform-server": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "@bhayward93/ckeditor5-build-minds": "^1.0.7",
     "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-balloon": "^17.0.0",
     "@gorniv/ngx-universal": "^2.0.1",
