--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "ng-pick-datetime": "^7.0.0",
     "ngx-drag-drop": "^2.0.0",
     "ngx-image-cropper": "^3.0.1",
-    "ngx-plyr": "^3.0.1",
+    "ngx-plyr": "Minds/ngx-plyr",
     "node-cache": "^5.1.0",
     "plotly.js": "^1.47.4",
     "plyr": "^3.5.6",
