--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,22 +34,13 @@ lint:
 ############
 # QA Stage #
 ############
-.template: &template
+.template: &cypress-template
   image: cypress/browsers:chrome67
   stage: qa
   variables:
     CYPRESS_INSTALL_BINARY: 3.4.1
   script:
     - npm ci
-    - >
-      if [ "$CI_BUILD_REF_NAME" == "master" ]; then
-        export E2E_DOMAIN=https://www.minds.com
-        export PRODUCTION=true
-      else
-        export E2E_DOMAIN=https://$CI_BUILD_REF_SLUG.$KUBE_INGRESS_BASE_DOMAIN
-        export PRODUCTION=false
-      fi
-    - export CYPRESS_baseUrl=$E2E_DOMAIN
     - echo "E2E tests for $CI_BUILD_REF_NAME running against $E2E_DOMAIN with user $CYPRESS_username"
     - $(npm bin)/cypress run --browser chrome --record --key $CYPRESS_RECORD_ID --config CYPRESS_baseUrl=$E2E_DOMAIN,video=false --env captcha_bypass_key=$CYPRESS_bypass_key,production=$PRODUCTION
   artifacts:
@@ -62,18 +53,24 @@ lint:
       - .npm
       - cache/Cypress
 
-qa:e2e:
-  <<: *template
+qa:sandbox:
+  <<: *cypress-template
   except:
-    - /^production$/
+    - /^master$/
   allow_failure: false
+  variables:
+    E2E_DOMAIN: 'https://$CI_BUILD_REF_SLUG.$KUBE_INGRESS_BASE_DOMAIN'
+    PRODUCTION: 'false'
 
-qa:e2e:production:
-  <<: *template
+qa:production:
+  <<: *cypress-template
   only:
-    - /^production$/
+    - /^master$/
   allow_failure: true
-  
+  variables:
+    PRODUCTION: 'true'
+    E2E_DOMAIN: 'https://www.minds.com'
+
 qa:manual:
   stage: qa
   script:
