--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ethjs-signer": "0.1.1",
     "express-http-proxy": "^1.6.0",
     "global": "^4.3.2",
+    "highlight.js": "^9.18.0",
     "macy": "^2.5.1",
     "material-design-icons": "~3.0.1",
     "material-design-lite": "~1.3.0",
