--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,18 +83,18 @@ qa:production:
     - /^master$/
   <<: *cypress_tests
 
-qa:manual:
-  stage: qa
-  script:
-    - echo "Manually approved"
-  when: manual
-  only:
-    refs:
-      - master
-      - epic/SSR
-      - production
-      - test/gitlab-ci
-  allow_failure: false
+# qa:manual:
+#   stage: qa
+#   script:
+#     - echo "Manually approved"
+#   when: manual
+#   only:
+#     refs:
+#       - master
+#       - epic/SSR
+#       - production
+#       - test/gitlab-ci
+#   allow_failure: false
 
 ###############
 # Build Stage #
