--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.1",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.1.1",
-    "@angular/compiler": "~8.1.1",
-    "@angular/core": "~8.1.1",
-    "@angular/forms": "~8.1.1",
-    "@angular/http": "~7.2.0",
-    "@angular/platform-browser": "~8.1.1",
-    "@angular/platform-browser-dynamic": "~8.1.1",
-    "@angular/platform-server": "~8.1.1",
-    "@angular/router": "~8.1.1",
-    "@gorniv/ngx-universal": "^2.0.1",
-    "@nguniversal/common": "~8.1.1",
-    "@nguniversal/express-engine": "^8.1.1",
-    "@nguniversal/module-map-ngfactory-loader": "~8.1.1",
-    "@nguniversal/socket-engine": "~8.1.1",
+    "@angular/animations": "~9.1.7",
+    "@angular/cdk": "~9.2.4",
+    "@angular/common": "~9.1.7",
+    "@angular/compiler": "~9.1.7",
+    "@angular/core": "~9.1.7",
+    "@angular/forms": "~9.1.7",
+    "@angular/http": "~7.2.16",
+    "@angular/platform-browser": "~9.1.7",
+    "@angular/platform-browser-dynamic": "~9.1.7",
+    "@angular/platform-server": "~9.1.7",
+    "@angular/router": "~9.1.7",
+    "@gorniv/ngx-universal": "^2.2.2",
+    "@nguniversal/common": "~9.1.1",
+    "@nguniversal/express-engine": "^9.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
+    "@nguniversal/socket-engine": "~9.1.1",
     "@sentry/browser": "^5.11.1",
     "angular-plotly.js": "^1.3.2",
     "bn.js": "^4.11.8",
@@ -79,14 +79,15 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.21",
-    "@angular/cli": "^8.1.1",
-    "@angular/compiler-cli": "~8.1.1",
-    "@angular/language-service": "~8.1.1",
+    "@angular-devkit/build-angular": "0.901.6",
+    "@angular/cli": "^9.1.6",
+    "@angular/compiler-cli": "~9.1.7",
+    "@angular/language-service": "~9.1.7",
     "@angularclass/hmr": "^2.1.3",
+    "@types/express-serve-static-core": "^4.17.7",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.4",
-    "@types/node": "~10.12.18",
+    "@types/node": "~14.0.1",
     "codelyzer": "^4.5.0",
     "cypress": "^4.3.0",
     "cypress-file-upload": "^3.3.3",
@@ -112,9 +113,9 @@
     "prettier": "^1.19.1",
     "pretty-quick": "^1.11.1",
     "protractor": "~5.4.2",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.12.0",
-    "typescript": "~3.4.5",
+    "ts-node": "~8.10.1",
+    "tslint": "~6.1.2",
+    "typescript": "~3.7.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10"
   },
