--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/core": "~9.1.7",
     "@angular/forms": "~9.1.7",
     "@angular/http": "~7.2.16",
+    "@angular/localize": "^9.1.7",
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/platform-server": "~9.1.7",
