--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-dev": "echo 'Deprecated, please use build:dev'; npm run build:dev --",
     "serve-dev": "echo 'Deprecated, please use serve:ssr'; npm run serve:ssr --",
     "prebuild:dev": "gulp build.sass --deploy-url=/",
-    "build:dev": "ng build --output-path=dist/en --deploy-url=/ --watch=true --poll=800 --aot",
+    "build:dev": "ng build --deploy-url=/ --watch=true --poll=800 --aot",
     "preserve:dev": "gulp build.sass --deploy-url=http://localhost:4200/",
     "serve:dev": "ng serve --deploy-url=http://localhost:4200/ --watch=true --poll=800 --aot --progress --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true",
     "test": "ng test",
@@ -19,12 +19,11 @@
     "e2e": "cypress run --debug",
     "e2e-open": "cypress open",
     "postinstall": "node patch.js",
-    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "serve:ssr": "node dist/server",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "serve:ssr": "node dist/server/main",
+    "build:ssr": "npm run build:client-and-server-bundles",
     "build:client-and-server-bundles": "npm run build && ng run minds:server:production",
-    "build:ssr:dev": "ng run minds:server:production && npm run compile:server",
-    "bundle-report": "webpack-bundle-analyzer dist/en/stats.json"
+    "build:ssr:dev": "ng run minds:server:production",
+    "bundle-report": "webpack-bundle-analyzer dist/browser/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +39,7 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/platform-server": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@danielmoncada/angular-datetime-picker": "^9.3.1",
     "@gorniv/ngx-universal": "^2.2.2",
     "@nguniversal/common": "~9.1.1",
     "@nguniversal/express-engine": "^9.1.1",
@@ -63,7 +63,6 @@
     "material-design-lite": "~1.3.0",
     "medium-editor": "^5.23.2",
     "moment": "^2.24.0",
-    "ng-pick-datetime": "^7.0.0",
     "ngx-drag-drop": "^2.0.0",
     "ngx-image-cropper": "^3.0.1",
     "ngx-plyr": "~4.0.0",
