--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "ng serve",
     "preinstall": "git config core.hooksPath .git/hooks/",
     "prebuild": "gulp build.sass",
-    "build": "sh build/base-locale.sh dist",
-    "build-dev": "echo 'Deprecated, please use build:dev'; npm run build:dev --",
-    "serve-dev": "echo 'Deprecated, please use serve:ssr'; npm run serve:ssr --",
+    "build": "ng build",
     "prebuild:dev": "gulp build.sass --deploy-url=/",
     "build:dev": "ng build --deploy-url=/ --watch=true --poll=800 --aot",
     "preserve:dev": "gulp build.sass --deploy-url=http://localhost:4200/",
