--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "ng serve",
     "preinstall": "git config core.hooksPath .git/hooks/",
     "prebuild": "gulp build.sass",
-    "build": "ng build",
+    "build": "ng build --localize --prod",
     "prebuild:dev": "gulp build.sass --deploy-url=/",
-    "build:dev": "ng build --deploy-url=/ --watch=true --poll=800 --aot",
+    "build:dev": "ng build --watch=true --poll=1000",
     "preserve:dev": "gulp build.sass --deploy-url=http://localhost:4200/",
-    "serve:dev": "ng serve --deploy-url=http://localhost:4200/ --watch=true --poll=800 --aot --progress --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true",
+    "serve:dev": "ng serve --deploy-url=http://localhost:4200/ --watch=true --poll=1000 --progress --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "cypress run --debug",
@@ -39,8 +39,9 @@
     "@angular/router": "~9.1.7",
     "@danielmoncada/angular-datetime-picker": "^9.3.1",
     "@gorniv/ngx-universal": "^2.2.2",
+    "@nguniversal/builders": "~9.1.1",
     "@nguniversal/common": "~9.1.1",
-    "@nguniversal/express-engine": "^9.1.1",
+    "@nguniversal/express-engine": "~9.1.1",
     "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
     "@nguniversal/socket-engine": "~9.1.1",
     "@sentry/browser": "^5.11.1",
