(chore): Disable i18n bundling

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -175,7 +175,7 @@ build:production:i18n:
     - echo "Create a new release $CI_PIPELINE_ID"
     - sentry-cli releases new $CI_PIPELINE_ID
     - sentry-cli releases set-commits --auto $CI_PIPELINE_ID
-    - sentry-cli releases files $CI_PIPELINE_ID upload-sourcemaps $CI_PROJECT_DIR/dist/en -x .js -x .map --validate --url-prefix $SOURCEMAP_PREFIX
+    - sentry-cli releases files $CI_PIPELINE_ID upload-sourcemaps $CI_PROJECT_DIR/dist/browser -x .js -x .map --validate --url-prefix $SOURCEMAP_PREFIX
     - sentry-cli releases finalize $CI_PIPELINE_ID
     - echo "Finalized release for $CI_PIPELINE_ID"
 
@@ -200,7 +200,7 @@ prepare:review:
 prepare:review:sentry:
   <<: *sentry_prepare
   variables:
-    SOURCEMAP_PREFIX: '~/en'
+    SOURCEMAP_PREFIX: '~/browser'
   except:
     refs:
       - master
