--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve",
     "preinstall": "git config core.hooksPath .git/hooks/",
     "prebuild": "gulp build.sass",
-    "build": "ng build --localize --prod",
+    "build": "ng build --prod",
     "prebuild:dev": "gulp build.sass --deploy-url=/",
     "build:dev": "ng build --watch=true --poll=1000",
     "preserve:dev": "gulp build.sass --deploy-url=http://localhost:4200/",
@@ -18,8 +18,8 @@
     "e2e-open": "cypress open",
     "postinstall": "node patch.js",
     "serve:ssr": "node dist/server/main",
-    "build:ssr": "npm run build:client-and-server-bundles",
-    "build:client-and-server-bundles": "npm run build -- --stats-json && ng run minds:server:production",
+    "build:ssr": "ng run minds:server:production",
+    "build:client-and-server-bundles": "npm run build -- --stats-json && npm run build:ssr",
     "build:ssr:dev": "ng run minds:server:production",
     "bundle-report": "webpack-bundle-analyzer dist/browser/stats.json"
   },
