--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "ng": "ng",
     "start": "ng serve",
     "preinstall": "git config core.hooksPath .git/hooks/",
-    "prebuild": "gulp build.sass",
     "build": "ng build --prod",
     "prebuild:dev": "gulp build.sass --deploy-url=/",
     "build:dev": "ng build --watch=true --poll=1000",
@@ -19,7 +18,6 @@
     "postinstall": "node patch.js",
     "serve:ssr": "node dist/server/main",
     "build:ssr": "ng run minds:server:production",
-    "build:client-and-server-bundles": "npm run build -- --stats-json && npm run build:ssr",
     "build:ssr:dev": "ng run minds:server:production",
     "bundle-report": "webpack-bundle-analyzer dist/browser/stats.json",
     "xi18n": "gulp extract.i18n"
@@ -89,6 +87,7 @@
     "@types/jasminewd2": "~2.0.4",
     "@types/node": "~14.0.1",
     "codelyzer": "^4.5.0",
+    "cross-env": "^7.0.2",
     "cypress": "^4.3.0",
     "cypress-file-upload": "^3.3.3",
     "gulp": "~4.0.0",
