(chore): review-only CI for this branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,7 +115,7 @@ build:review:
   except:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - production
       - test/gitlab-ci
 
@@ -135,7 +135,7 @@ build:production:bundles:
   only:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - production
       - test/gitlab-ci
 
@@ -168,7 +168,7 @@ prepare:review:
   except:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - production
       - test/gitlab-ci
 
@@ -179,7 +179,7 @@ prepare:review:sentry:
   except:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - production
       - test/gitlab-ci
   dependencies:
@@ -199,7 +199,7 @@ prepare:production:
   only:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - production
       - test/gitlab-ci
   dependencies:
@@ -212,7 +212,7 @@ prepare:production:sentry:
   only:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - production
       - test/gitlab-ci
   dependencies:
@@ -236,7 +236,7 @@ prepare:production:sentry:
   except:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - production
       - test/gitlab-ci
 
@@ -265,7 +265,7 @@ review:start:
   except:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - production
       - test/gitlab-ci
 
@@ -310,7 +310,7 @@ staging:fpm:
   only:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - test/gitlab-ci
 
 review:preprod:
@@ -344,7 +344,7 @@ deploy:canary:
   only:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - test/gitlab-ci
 
 deploy:production:
@@ -361,7 +361,7 @@ deploy:production:
   only:
     refs:
       - master
-      - epic/angular-9
+      #- epic/angular-9
       - test/gitlab-ci
 
 #################
