--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,6 +107,7 @@ build:review:
     - npm ci && npm install -g gulp-cli
     - npm run postinstall
     - sh build/ng9-bundles.sh dist/browser /browser/ dist/server
+    - sh build/ng9-locl-convert.sh dist/browser src/locale
   artifacts:
     name: '$CI_COMMIT_REF_SLUG'
     paths:
@@ -125,6 +126,7 @@ build:production:bundles:
     - npm ci && npm install -g gulp-cli
     - npm run postinstall
     - sh build/ng9-bundles.sh dist/browser https://cdn-assets.minds.com/front/dist/browser/ dist/server
+    - sh build/ng9-locl-convert.sh dist/browser src/locale
   artifacts:
     name: '$CI_COMMIT_REF_SLUG'
     paths:
