--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@angular/compiler-cli": "~9.1.7",
     "@angular/language-service": "~9.1.7",
     "@angularclass/hmr": "^2.1.3",
+    "@locl/cli": "0.0.1-beta.9",
     "@types/express-serve-static-core": "^4.17.7",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.4",
@@ -116,7 +117,8 @@
     "tslint": "~6.1.2",
     "typescript": "~3.7.5",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "xmlbuilder2": "^2.1.2"
   },
   "husky": {
     "hooks": {
