--- a/angular.json
+++ b/angular.json
@@ -9,20 +9,16 @@
       "projectType": "application",
       "i18n": {
         "sourceLocale": {
-          "code": "en",
-          "baseHref": ""
+          "code": "en"
         },
         "locales": {
           "es": {
-            "baseHref": "",
             "translation": "src/locale/Minds.es.xliff"
           },
           "vi": {
-            "baseHref": "",
             "translation": "src/locale/Minds.vi.xliff"
           },
           "th": {
-            "baseHref": "",
             "translation": "src/locale/Minds.th.xliff"
           }
         }
@@ -33,6 +29,7 @@
           "options": {
             "outputPath": "dist/browser",
             "index": "src/index.html",
+            "baseHref": "/static/",
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
