--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,14 +19,12 @@ variables:
 l10n-sync:
   stage: l10n
   script:
-    - >
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/minds/l10n.git
-      cp src/locale/Base.xlf l10n/front/Default.xliff
-      cd l10n
-      #git commit -am '(feat): update default language for front'
-    - >
-      cd .. # back to front
-      cp l10n/front/locale/ locale/
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/minds/l10n.git
+    - cp src/locale/Base.xlf l10n/front/Default.xliff
+    - cd l10n
+    - git commit -am 'update default language for front' && git push --set-upstream origin master
+    - cd .. # back to front
+    - cp -r l10n/front/locale/ locale/
 
 test:
   image: circleci/node:13-browsers
